<resources>
    <string name="app_name">NmCrd</string>
    <string name="title_login">Sign in</string>
    <string name="title_add_info">Add Contact Information</string>
    <string name="title_edit_info">Edit Contact Information</string>
    <string name="prompt_blood">Blood Type</string>
    <string name="prompt_allergy">Allergy</string>
    <string name="prompt_disease">Underlying Disease</string>

    <string name="action_next">Next</string>
    <string name="action_back">Back</string>
    <string name="action_login">Log in</string>
    <string name="action_logout">Log out"</string>
    <string name="action_register">Register</string>
    <string name="action_edit">Edit Information</string>
    <string name="action_confirm">Confirm</string>
    <string-array name="bloodType_array">
        <item>Select Blood Type</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
    </string-array>
</resources>
