<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardDetail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="0dp"
    android:clickable="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/card_pic"
            android:layout_width="149dp"
            android:layout_height="164dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/contact_pic" />

        <TextView
            android:id="@+id/card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="Name"
            android:textAppearance="@style/text_value"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_pic" />

        <TextView
            android:id="@+id/cardPrompt_blood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/prompt_blood"
            android:textAppearance="@style/text_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_name" />

        <TextView
            android:id="@+id/card_blood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="A"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cardPrompt_blood"
            app:layout_constraintStart_toStartOf="@+id/cardPrompt_blood"
            app:layout_constraintTop_toBottomOf="@+id/cardPrompt_blood" />

        <TextView
            android:id="@+id/cardPrompt_allergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/prompt_allergy"
            android:textAppearance="@style/text_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_blood" />

        <TextView
            android:id="@+id/card_allergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Squid"
            android:textAppearance="@style/text_value"
            app:layout_constraintEnd_toEndOf="@+id/cardPrompt_allergy"
            app:layout_constraintStart_toStartOf="@+id/cardPrompt_allergy"
            app:layout_constraintTop_toBottomOf="@+id/cardPrompt_allergy" />

        <TextView
            android:id="@+id/cardPrompt_disease"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/prompt_disease"
            android:textAppearance="@style/text_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_allergy" />

        <TextView
            android:id="@+id/card_disease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Aids"
            android:textAppearance="@style/text_value"
            app:layout_constraintEnd_toEndOf="@+id/cardPrompt_disease"
            app:layout_constraintStart_toStartOf="@+id/cardPrompt_disease"
            app:layout_constraintTop_toBottomOf="@+id/cardPrompt_disease" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
