<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".AddContactActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/round_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="285dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="11dp"
            android:text="@string/title_add_info"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detail_img"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title"
            app:srcCompat="@drawable/contact_pic" />

        <EditText
            android:id="@+id/add_name"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHighlight="@color/grey"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_img" />

        <Spinner
            android:id="@+id/add_blood"
            android:layout_width="280dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/add_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/add_name"
            app:layout_constraintTop_toBottomOf="@+id/add_name" />

        <EditText
            android:id="@+id/add_allergy"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Allergy"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHighlight="@color/grey"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@+id/add_blood"
            app:layout_constraintStart_toStartOf="@+id/add_blood"
            app:layout_constraintTop_toBottomOf="@+id/add_blood" />

        <EditText
            android:id="@+id/add_disease"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Underlying Disease"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHighlight="@color/grey"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@+id/add_allergy"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/add_allergy"
            app:layout_constraintTop_toBottomOf="@+id/add_allergy" />

        <EditText
            android:id="@+id/add_phone"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Emergency Phone"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHighlight="@color/grey"
            android:textColorHint="@color/grey"
            android:textColorLink="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@+id/add_disease"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/add_disease"
            app:layout_constraintTop_toBottomOf="@+id/add_disease" />

        <Button
            android:id="@+id/btn_add_regist"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn_gold"
            android:text="@string/action_next"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_add_back"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn_grey"
            android:text="@string/action_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>